# jenkins-credential-extractor

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  README.md  REUSE.toml  USER_GUIDE.md  brief.txt  demo_automation.py  pyproject.toml  requirements.txt  sonar-project.properties
src/jenkins_credential_extractor/: __init__.py  auth.py  cli.py  config.py  credentials.py  enhanced_jenkins.py  error_handling.py  jenkins.py  performance.py  projects.py  tailscale.py  tailscale_new.py  tailscale_old.py
tests/: __init__.py  test_automation.py  test_credentials.py  test_enhanced_automation.py  test_enhanced_automation_old.py.bak  test_enhanced_automation_simple.py
